fix: header-right gap

--- a/Brand-shop/style.scss
+++ b/Brand-shop/style.scss
@@ -95,9 +95,10 @@ ul {
 
         &-right {
             display: flex;
-            width: 160px;
             justify-content: space-between;
             align-items: flex-end;
+            gap: 40px;
+
         }
     }
 }
@@ -110,7 +111,7 @@ ul {
 
 .mobile-menu {
     position: absolute;
-    visibility: visible;
+    visibility: hidden;
     right: 0;
     top: 75px;
     width: 232px;
